@@ -13,6 +13,8 @@ import java.util.stream.Collectors;
 import org.apache.pdfbox.text.PDFTextStripper;
 import org.apache.pdfbox.text.TextPosition;
 
+import net.raohome.TextStripperWithPos.TableBuilder.Justification;
+
 public class TextStripperWithPos extends PDFTextStripper {
 
 	private List<TextData> textData;
@@ -24,8 +26,8 @@ public class TextStripperWithPos extends PDFTextStripper {
 			TextPosition first = textPositions.getFirst();
 			TextPosition last = textPositions.getLast();
 
-			return String.format("(%d,%d)=>(%d,%d) (%s/%f) %s", (int) first.getX(), (int) first.getY(), (int) last.getEndX(),
-					(int) last.getEndY(), first.getFont().getName(), first.getFontSize(), text);
+			return String.format("(%d,%d)=>(%d,%d) (%s/%f) %s", (int) first.getX(), (int) first.getY(),
+					(int) last.getEndX(), (int) last.getEndY(), first.getFont().getName(), first.getFontSize(), text);
 		}
 
 		public int getX() {
@@ -34,6 +36,10 @@ public class TextStripperWithPos extends PDFTextStripper {
 
 		int getY() {
 			return (int) textPositions.getFirst().getY();
+		}
+
+		public int getEndX() {
+			return (int) textPositions.getLast().getEndX();
 		}
 	}
 
@@ -182,15 +188,150 @@ public class TextStripperWithPos extends PDFTextStripper {
 		List<List<TextData>> list = lines.values().stream().filter(t -> {
 			int y = t.getFirst().getY();
 			return y > upperY && y < lowerY;
-		}).toList();
+		}).collect(Collectors.toList());
+
+		list.sort((l1, l2) -> {
+			int first = l1.getFirst().getY();
+			int second = l2.getFirst().getY();
+			return Integer.compare(first, second);
+		});
 		return list;
 	}
 
 	public List<List<TextData>> findLinesStartingWith(String text, Predicate<TextData> acceptor) {
 		return lines.values().stream().filter(t -> {
 			return text.equals(t.getFirst().text());
-		}).filter(l-> {
+		}).filter(l -> {
 			return acceptor.test(l.getFirst());
 		}).toList();
+	}
+
+	public static class Column {
+
+		private String name;
+		public String getName() {
+			return name;
+		}
+
+		private Justification justification;
+		private TextData headerData;
+
+		int pos;
+
+		void computePos() {
+			if (this.justification == Justification.Left) {
+				pos = headerData.getX();
+			} else {
+				pos = headerData.getEndX();
+			}
+		}
+
+		public Column(String name, Justification justification) {
+			this.name = name;
+			this.justification = justification;
+		}
+
+		public static Column ofColumn(String name, Justification justification) {
+			return new Column(name, justification);
+		}
+	}
+
+	public class TableCell {
+		public Column column;
+		public TextData data;
+	}
+
+	public class TableRow {
+		public List<TableCell> cells = new ArrayList<TextStripperWithPos.TableCell>();
+	}
+
+	public class TableBuilder {
+		public static enum Justification {
+			Left, Right
+		};
+
+		private List<Column> columns = new ArrayList<TextStripperWithPos.Column>();
+
+		private String startingWord;
+		private String endingWord;
+
+		private Predicate<TextData> textFilter;
+
+		public TableBuilder startingWord(String startingWord) {
+			this.startingWord = startingWord;
+			return this;
+		}
+
+		public TableBuilder endingWord(String endingWord) {
+			this.endingWord = endingWord;
+			return this;
+		}
+
+		public TableBuilder addColumn(Column clmn) {
+			columns.add(clmn);
+			return this;
+		}
+
+		public TableBuilder withLineFiter(Predicate<TextData> textFilter) {
+			this.textFilter = textFilter;
+			return this;
+
+		}
+
+		public List<TableRow> process() {
+			List<List<TextData>> lines = findLinesBetween(startingWord, endingWord, textFilter);
+			// Let's assume first row is the header row and find coordinates
+			List<TextData> headerLine = lines.getFirst();
+			System.out.println(headerLine);
+			for (Column clmn : columns) {
+				for (TextData td : headerLine) {
+					if (td.text.equals(clmn.name)) {
+						clmn.headerData = td;
+					}
+				}
+			}
+
+			for (Column clmn : columns) {
+				if (clmn.headerData == null) {
+					throw new RuntimeException("Could not find column data: " + clmn.name);
+				}
+				clmn.computePos();
+			}
+
+			List<TableRow> rows = new ArrayList<TextStripperWithPos.TableRow>();
+			for (int i = 1; i < lines.size(); i++) {
+				List<TextData> line = lines.get(i);
+				TableRow row = new TableRow();
+				rows.add(row);
+				for (Column clmn : columns) {
+					for (TextData td : line) {
+						int pos;
+						if (clmn.justification == Justification.Left) {
+							pos = td.getX();
+						} else {
+							pos = td.getEndX();
+						}
+						if (pos == clmn.pos) {
+							TableCell cell = new TableCell();
+							cell.column = clmn;
+							cell.data = td;
+							row.cells.add(cell);
+							break;
+						}
+					}
+				}
+			}
+
+			return rows;
+		}
+	}
+
+	public List<List<TextPosition>> buildTableWithColumns(String startingWord, String endWord, String... columns) {
+
+		return List.of();
+	}
+
+	public TableBuilder newTableBuilder() {
+		return new TableBuilder();
 	}
 }
